Disabled the assign button when not in segmentation mode

--- a/labelCloud/resources/interfaces/interface.ui
+++ b/labelCloud/resources/interfaces/interface.ui
@@ -1442,7 +1442,7 @@
           </sizepolicy>
           </property>
           <property name="toolTip">
-          <string>Assign labels</string>
+          <string>Assign labels to points inside a box</string>
           </property>
           <property name="layoutDirection">
           <enum>Qt::LeftToRight</enum>
