--- a/labelCloud/resources/interfaces/interface.ui
+++ b/labelCloud/resources/interfaces/interface.ui
@@ -1433,6 +1433,31 @@
           </property>
          </widget>
         </item>
+        <item>
+        <widget class="QPushButton" name="button_assign_label">
+          <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+          </sizepolicy>
+          </property>
+          <property name="toolTip">
+          <string>Assign labels to points inside a box</string>
+          </property>
+          <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="styleSheet">
+          <string notr="true"/>
+          </property>
+          <property name="text">
+          <string>Assign</string>
+          </property>
+          <property name="flat">
+          <bool>false</bool>
+          </property>
+        </widget>
+        </item>
        </layout>
       </item>
       <item>
@@ -1697,6 +1722,7 @@
   <tabstop>edit_rot_z</tabstop>
   <tabstop>button_deselect_label</tabstop>
   <tabstop>button_delete_label</tabstop>
+  <tabstop>button_assign_label</tabstop>
   <tabstop>label_list</tabstop>
  </tabstops>
  <resources/>
