--- a/labelCloud/resources/interfaces/settings_interface.ui
+++ b/labelCloud/resources/interfaces/settings_interface.ui
@@ -333,107 +333,7 @@ Bounding Box Parameter</string>
      <property name="rightMargin">
       <number>0</number>
      </property>
-     <item row="8" column="1" colspan="2">
-      <widget class="QCheckBox" name="checkBox_zrotationonly">
-       <property name="toolTip">
-        <string>Only allow z-rotation of bounding boxes. Deactivate to also label x- &amp; y-rotation.</string>
-       </property>
-       <property name="text">
-        <string>Z-Rotation-Only Mode (otherwise rotation around x, y and z)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="label_labelformat">
-       <property name="toolTip">
-        <string>Format for exporting labels.</string>
-       </property>
-       <property name="text">
-        <string>Label Format</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1">
-      <widget class="QLabel" name="label_stdbboxwidth">
-       <property name="toolTip">
-        <string>Default width of the bounding box (for picking mode).</string>
-       </property>
-       <property name="text">
-        <string>Standard Bounding Box Width</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="2">
-      <widget class="QSpinBox" name="spinBox_exportprecision">
-       <property name="toolTip">
-        <string>Number of decimal places shown for the parameters of the active bounding box.</string>
-       </property>
-      </widget>
-     </item>
-     <item row="11" column="1">
-      <widget class="QLabel" name="label_stdbboxtranslation">
-       <property name="toolTip">
-        <string>Standard step for translating the bounding box (meter).</string>
-       </property>
-       <property name="text">
-        <string>Standard Translation Step</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QComboBox" name="comboBox_labelformat">
-       <property name="toolTip">
-        <string>Format for exporting labels.</string>
-       </property>
-      </widget>
-     </item>
-     <item row="15" column="1">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>30</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
      <item row="14" column="2">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_minbboxdimensions">
-       <property name="toolTip">
-        <string>Minimum value for the length, width and height of a bounding box.</string>
-       </property>
-       <property name="decimals">
-        <number>3</number>
-       </property>
-       <property name="singleStep">
-        <double>0.001000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="1">
-      <widget class="QLabel" name="label_stdbboxrotation">
-       <property name="toolTip">
-        <string>Standard step for rotating the bounding box (degree).</string>
-       </property>
-       <property name="text">
-        <string>Standard Rotation Step</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="2">
-      <widget class="QLineEdit" name="lineEdit_standardobjectclass">
-       <property name="toolTip">
-        <string>Default object class for new bounding boxes.</string>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="2">
       <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxscaling">
        <property name="toolTip">
         <string>Standard step for scaling the bounding box.</string>
@@ -449,91 +349,53 @@ Bounding Box Parameter</string>
        </property>
       </widget>
      </item>
-     <item row="11" column="2">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxtranslation">
+     <item row="16" column="2">
+      <spacer name="verticalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Expanding</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="12" column="1">
+      <widget class="QLabel" name="label_stdbboxtranslation">
        <property name="toolTip">
         <string>Standard step for translating the bounding box (meter).</string>
        </property>
-       <property name="decimals">
-        <number>3</number>
-       </property>
-       <property name="maximum">
-        <double>500.000000000000000</double>
-       </property>
-       <property name="singleStep">
-        <double>0.100000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QLabel" name="label_stdbboxlength">
-       <property name="toolTip">
-        <string>Default length of the bounding box (for picking mode).</string>
-       </property>
        <property name="text">
-        <string>Standard Bounding Box Length</string>
+        <string>Standard Translation Step</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="2">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxrotation">
-       <property name="toolTip">
-        <string>Standard step for rotating the bounding box (degree).</string>
-       </property>
-       <property name="decimals">
-        <number>3</number>
-       </property>
-       <property name="maximum">
-        <double>364.000000000000000</double>
-       </property>
-       <property name="singleStep">
-        <double>0.100000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="14" column="1">
-      <widget class="QLabel" name="label_minbboxdimensions">
-       <property name="toolTip">
-        <string>Minimum value for the length, width and height of a bounding box.</string>
-       </property>
-       <property name="text">
-        <string>Min. Bounding Box Dimensions</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2">
-      <widget class="QPlainTextEdit" name="plainTextEdit_objectclasses">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
+     <item row="2" column="1">
+      <widget class="QLabel" name="label_objectclasses">
        <property name="toolTip">
         <string>List of object classes for autocompletion in the text field.</string>
        </property>
-       <property name="sizeAdjustPolicy">
-        <enum>QAbstractScrollArea::AdjustToContents</enum>
+       <property name="text">
+        <string>Object Classes</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
        </property>
       </widget>
      </item>
-     <item row="7" column="2">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxheight">
+     <item row="10" column="2">
+      <widget class="QSpinBox" name="spinBox_exportprecision">
        <property name="toolTip">
-        <string>Default height of the bounding box (for picking mode).</string>
-       </property>
-       <property name="decimals">
-        <number>3</number>
-       </property>
-       <property name="maximum">
-        <double>500.000000000000000</double>
-       </property>
-       <property name="singleStep">
-        <double>0.100000000000000</double>
+        <string>Number of decimal places shown for the parameters of the active bounding box.</string>
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="10" column="1">
       <widget class="QLabel" name="label_exportprecision">
        <property name="toolTip">
         <string>Number of decimal places shown for the parameters of the active bounding box.</string>
@@ -559,42 +421,84 @@ Bounding Box Parameter</string>
        </property>
       </widget>
      </item>
-     <item row="13" column="1">
-      <widget class="QLabel" name="label_stdbboxscaling">
+     <item row="7" column="1">
+      <widget class="QLabel" name="label_stdbboxheight">
        <property name="toolTip">
-        <string>Standard step for scaling the bounding box.</string>
+        <string>Default height of the bounding box (for picking mode).</string>
        </property>
        <property name="text">
-        <string>Standard Scaling Step</string>
+        <string>Standard Bounding Box Height</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
-      <widget class="QLabel" name="label_standardobjectclass">
+     <item row="12" column="2">
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxtranslation">
+       <property name="toolTip">
+        <string>Standard step for translating the bounding box (meter).</string>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>500.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QPlainTextEdit" name="plainTextEdit_objectclasses">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+        <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>Default object class for new bounding boxes.</string>
+        <string>List of object classes for autocompletion in the text field.</string>
        </property>
-       <property name="text">
-        <string>Standard Object Class</string>
+       <property name="sizeAdjustPolicy">
+        <enum>QAbstractScrollArea::AdjustToContents</enum>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="label_objectclasses">
+     <item row="6" column="2">
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxwidth">
        <property name="toolTip">
-        <string>List of object classes for autocompletion in the text field.</string>
+        <string>Default width of the bounding box (for picking mode).</string>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>500.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLabel" name="label_labelformat">
+       <property name="toolTip">
+        <string>Format for exporting labels.</string>
        </property>
        <property name="text">
-        <string>Object Classes</string>
+        <string>Label Format</string>
        </property>
-       <property name="alignment">
-        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </widget>
+     </item>
+     <item row="15" column="2">
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_minbboxdimensions">
+       <property name="toolTip">
+        <string>Minimum value for the length, width and height of a bounding box.</string>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="singleStep">
+        <double>0.001000000000000</double>
        </property>
       </widget>
      </item>
@@ -617,33 +521,69 @@ Bounding Box Parameter</string>
        </property>
       </widget>
      </item>
-     <item row="16" column="2">
-      <widget class="QDialogButtonBox" name="buttonBox">
-       <property name="locale">
-        <locale language="English" country="UnitedStates"/>
-       </property>
+     <item row="16" column="1">
+      <spacer name="verticalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Vertical</enum>
        </property>
-       <property name="standardButtons">
-        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
+       <property name="sizeType">
+        <enum>QSizePolicy::Expanding</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>30</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="1" column="2">
+      <widget class="QComboBox" name="comboBox_labelformat">
+       <property name="toolTip">
+        <string>Format for exporting labels.</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
-      <widget class="QLabel" name="label_stdbboxheight">
+     <item row="13" column="1">
+      <widget class="QLabel" name="label_stdbboxrotation">
        <property name="toolTip">
-        <string>Default height of the bounding box (for picking mode).</string>
+        <string>Standard step for rotating the bounding box (degree).</string>
        </property>
        <property name="text">
-        <string>Standard Bounding Box Height</string>
+        <string>Standard Rotation Step</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="2">
-      <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxwidth">
+     <item row="13" column="2">
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxrotation">
+       <property name="toolTip">
+        <string>Standard step for rotating the bounding box (degree).</string>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>364.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QLabel" name="label_stdbboxwidth">
        <property name="toolTip">
         <string>Default width of the bounding box (for picking mode).</string>
+       </property>
+       <property name="text">
+        <string>Standard Bounding Box Width</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="2">
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_stdbboxheight">
+       <property name="toolTip">
+        <string>Default height of the bounding box (for picking mode).</string>
        </property>
        <property name="decimals">
         <number>3</number>
@@ -656,23 +596,83 @@ Bounding Box Parameter</string>
        </property>
       </widget>
      </item>
-     <item row="15" column="2">
-      <spacer name="verticalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
+     <item row="14" column="1">
+      <widget class="QLabel" name="label_stdbboxscaling">
+       <property name="toolTip">
+        <string>Standard step for scaling the bounding box.</string>
        </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
+       <property name="text">
+        <string>Standard Scaling Step</string>
        </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
+      </widget>
      </item>
-     <item row="16" column="1">
+     <item row="5" column="1">
+      <widget class="QLabel" name="label_stdbboxlength">
+       <property name="toolTip">
+        <string>Default length of the bounding box (for picking mode).</string>
+       </property>
+       <property name="text">
+        <string>Standard Bounding Box Length</string>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="1">
+      <widget class="QLabel" name="label_minbboxdimensions">
+       <property name="toolTip">
+        <string>Minimum value for the length, width and height of a bounding box.</string>
+       </property>
+       <property name="text">
+        <string>Min. Bounding Box Dimensions</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1" colspan="2">
+      <widget class="QCheckBox" name="checkBox_zrotationonly">
+       <property name="toolTip">
+        <string>Only allow z-rotation of bounding boxes. Deactivate to also label x- &amp; y-rotation.</string>
+       </property>
+       <property name="text">
+        <string>Z-Rotation-Only Mode (otherwise rotation around x, y and z)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLabel" name="label_standardobjectclass">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="toolTip">
+        <string>Default object class for new bounding boxes.</string>
+       </property>
+       <property name="text">
+        <string>Standard Object Class</string>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="2">
+      <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="locale">
+        <locale language="English" country="UnitedStates"/>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="standardButtons">
+        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="2">
+      <widget class="QLineEdit" name="lineEdit_standardobjectclass">
+       <property name="toolTip">
+        <string>Default object class for new bounding boxes.</string>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="1">
       <widget class="QPushButton" name="reset_button">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
@@ -682,6 +682,13 @@ Bounding Box Parameter</string>
        </property>
        <property name="text">
         <string>Reset to Default</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1" colspan="2">
+      <widget class="QCheckBox" name="checkBox_propagatelabels">
+       <property name="text">
+        <string>Propagate Labels (copy all bounding boxes to the next point cloud)</string>
        </property>
       </widget>
      </item>
